--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,16 @@
+15 lines (14 sloc)  603 Bytes
+   
+#MYSQL DB Properties
+#=====================
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/micro-practice
+spring.datasource.username=root
+spring.datasource.password=ROOT
+#spring.rabbitmq.addresses=amqps://fagynazf:P3op3N-AwuTB1hmXCn_FZ8V_bnMTzAdP@puffin.rmq2.cloudamqp.com/fagynazf
 
+#JPA Properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
